# H2GIS_gdalplugin

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.build  Dockerfile.ubuntu2204  Dockerfile.ubuntu2404  Dockerfile.ubuntu2510  README.md  copilot-instructions.md  graal_isolate.h  h2gis.h  h2gis_wrapper.cpp  h2gis_wrapper.h  install.sh  ogr_h2gis.h  ogrh2gisdatasource.cpp  ogrh2gisdriver.cpp  ogrh2gislayer.cpp  qgis_startup.py  uninstall.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  package-plugin.yml  release.yml
doc/source/drivers/vector/: h2gis.rst
docker-build/: Dockerfile  build_legacy.sh
docs/: DEVELOPER.md
gdal-integration/: CMakeLists.txt  README.md  driver_declaration.cmake
qgis-plugin/: README.md
qgis-plugin/h2gis_driver_installer/: LICENSE  README.md  __init__.py  demo_database.py  downloader.py  h2gis_plugin.py  installer.py  installer_dialog.py  metadata.txt  pb_tool.cfg  platform_detector.py  resources.qrc  resources_rc.py
qgis-plugin/h2gis_driver_installer/help/: index.html
qgis-plugin/h2gis_driver_installer/i18n/: en.qm  en.ts  fr.qm  fr.ts
qgis-plugin/h2gis_driver_installer/tests/: __init__.py  test_installer.py  test_platform_detector.py
tests/: benchmark_table_scan.py  conftest.py  ogr_h2gis.py
